syntax = "proto3";

package protos;

option java_package = "com.huanchengfly.tieba.post.api.models.protos.frsPage";

import "Common.proto";
import "CommonRequest.proto";
import "ThreadInfo.proto";

message NavTabInfo {
  repeated FrsTabInfo tab = 1;
  repeated FrsTabInfo menu = 2;
  repeated FrsTabInfo head = 3;
}

message Group {
  int32 hide_recommend_group = 1;
  int32 group_count = 2;
}

message Forum {
  int64 forum_id = 1;
  string level1_dir_name = 2;
}

message RankInfo {
  int32 sign_count = 1;
  int32 sign_rank = 2;
  int32 member_count = 3;
  double dir_rate = 4;
}

message SignForum {
  int32 is_on = 1;
  int32 is_filter = 2;
  optional Forum forum_info = 3;
  RankInfo current_rank_info = 4;
}

message SignUser {
  int64 user_id = 1;
  int32 is_sign_in = 2;
  int32 user_sign_rank = 3;
  int32 sign_time = 4;
  int32 cont_sign_num = 5;
  int32 cout_total_sign_num = 6;
  int32 is_org_disabled = 7;
  int32 c_sign_num = 8;
  int32 hun_sign_num = 9;
  int32 total_resign_num = 10;
  int32 miss_sign_num = 11;
}

message SignInfo {
  SignUser user_info = 1;
  SignForum forum_info = 2;
}

message Classify {
  string name = 1;
  int64 id = 2;
  int32 class_id = 3;
  string class_name = 4;
}

message Manager {
  int64 id = 1;
  string name = 2;
  string show_name = 3;
  string portrait = 4;
}

message PostPrefix {
  int32 mode = 1;
  string text = 2;
  string type = 3;
  string time = 4;
}

message PostTopic {
  string title_topic = 1;
  string content_topic = 2;
}

message ForumInfo {
  int64 id = 1;
  string name = 2;
  string first_class = 3;
  string second_class = 4;
  int32 is_exists = 5;
  int32 is_like = 6;
  int32 user_level = 7;
  string level_name = 8;
  int32 member_num = 9;
  int32 thread_num = 10;
  int32 post_num = 11;
  int32 has_frs_star = 12;
  int32 cur_score = 13;
  int32 levelup_score = 14;
  SignInfo sign_in_info = 15;
  repeated Manager managers = 17;
  string tids = 20;
  repeated Classify good_classify = 21;
  string avatar = 24;
  string slogan = 25;
  string f_share_img = 78;
  string forum_share_link = 79;
}

message AdParam {
  optional int32 load_count = 1;
  optional int32 refresh_count = 2;
  optional string yoga_lib_version = 3;
}

message FrsPageRequestData {
  optional string ad_context_list = 60;
  optional string ad_ext_params = 62;
  AdParam ad_param = 51;
  AppPosInfo app_pos = 50;
  optional int32 call_from = 56;
  optional int32 category_id = 44;
  optional int32 cid = 5;
  optional int32 class_id = 23;
  CommonRequest common = 39;
  optional int32 ctime = 17;
  optional int32 data_size = 18;
  optional int64 hot_thread_id = 58;
  optional int32 is_default_navtab = 59;
  optional int32 is_good = 4;
  optional int32 is_selection = 55;
  string kw = 1;
  optional uint64 last_click_tid = 48;
  optional string lastids = 40;
  int32 load_type = 49;
  optional int32 net_error = 19;
  optional string obj_locate = 52;
  optional string obj_source = 53;
  int32 pn = 15;
  int32 q_type = 14;
  int32 rn = 2;
  int32 rn_need = 3;
  double scr_dip = 13;
  int32 scr_h = 12;
  int32 scr_w = 11;
  optional int32 sort_type = 47;
  optional int32 st_param = 27;
  optional string st_type = 16;
  optional string up_schema = 61;
  optional int32 with_group = 8;
  optional string yuelaou_locate = 45;
}

message FrsPageRequest {
  FrsPageRequestData data = 1;
}

message FrsPageResponseData {
  User user = 1;
  ForumInfo forum = 2;
  Page page = 4;
  Anti anti = 5;
  Group group = 6;
  repeated ThreadInfo thread_list = 7;
  repeated int64 thread_id_list = 8;
  int32 is_new_url = 9;
  int32 time = 11;
  int32 ctime = 12;
  int64 logid = 13;
  int32 server_time = 14;
  repeated User user_list = 17;
  repeated FrsTabInfo frs_tab_info = 22;
  NavTabInfo nav_tab_info = 37;
}

message FrsPageResponse {
  Error error = 1;
  FrsPageResponseData data = 2;
}
